Added more hexes

--- a/juegos-discord/data/maps/testMap.properties
+++ b/juegos-discord/data/maps/testMap.properties
@@ -4,7 +4,7 @@ nombre=Mapa de pruebas 1
 origin=250
 size=15
 orientation=flat
-hexes=7
+hexes=10
 hex1=0,0,0
 hex2=1,-1,0
 hex3=1,0,-1
@@ -12,3 +12,6 @@ hex4=0,1,-1
 hex5=0,-1,1
 hex6=-1,0,1
 hex7=-1,1,0
+hex8=-2,2,0
+hex9=1,1,-2
+hex10=2,-2,0
